# Polymarket

./: AGENTS.md  BULLETS.html  BULLETS.rst  CLAUDE.md  IDEAS.md  README.md  REPORT.md  config.py  coverage.json  dry_run_output.jsonl  findings.md  progress.md  pyproject.toml  report.html  run.py  status.md  stuck_positions.json  task_plan.md
benchmark/: cross_platform.py  evs.py  latency_sim.py  recorder.py  replay.py  weight_search.py
client/: auth.py  cache.py  clob.py  data.py  fanatics.py  fanatics_auth.py  gamma.py  gas.py  kalshi.py  kalshi_auth.py  kalshi_cache.py  platform.py  ws.py  ws_bridge.py  ws_pool.py
docs/: ACTIONABLE_ARB_IMPLEMENTATION_PLAN.md  CLEANUP_SUMMARY.txt  DELETION_LOG.md  REFACTOR_ANALYSIS.md
executor/: cross_platform.py  cross_platform_v2.py  engine.py  fill_state.py  maker_lifecycle.py  presigner.py  safety.py  sizing.py  tick_size.py
monitor/: display.py  logger.py  pnl.py  scan_tracker.py  status.py
pipeline/: __init__.py  gas_utils.py
report/: __init__.py  ablation_study_20260216_session24.md  ablation_study_session24_20260216.json  collector.py  dry_run_20260216_145154_opportunity_deep_dive.csv  dry_run_20260216_145154_opportunity_report.html  dry_run_20260216_145154_opportunity_report.md  dry_run_20260216_153353_opportunity_deep_dive.csv  dry_run_20260216_153353_opportunity_report.html  dry_run_20260216_153353_opportunity_report.md  import_ledger.py  readiness.py  research_cycle_dry_run_20260216.md  research_cycle_dry_run_5m_20260216_115259.md  research_cycle_dry_run_5m_postfix_20260216_121124.md  server.py  store.py  (+1 more)
(+114 files in other folders)
