[project]
name = "polymarket-arb"
version = "0.1.0"
description = "Polymarket arbitrage bot - binary and NegRisk rebalancing"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client>=0.18.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "eth-account>=0.13.0",
    "rapidfuzz>=3.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "respx>=0.22.0",
]
